[gd_scene load_steps=11 format=3 uid="uid://kqawc6bgyiah"]

[ext_resource type="PackedScene" uid="uid://clvl0h558xy0f" path="res://combat/levels/tutorial_levels/tutorial_level_2/terrain.tscn" id="1_cimcb"]
[ext_resource type="Script" path="res://combat/CController.gd" id="2_adyfm"]
[ext_resource type="PackedScene" uid="uid://b3kmpdxrr68vj" path="res://resources/sprites/grid/combat_map_selector.tscn" id="3_e6cvr"]
[ext_resource type="Script" path="res://combat/Combat.gd" id="4_083q5"]
[ext_resource type="Resource" uid="uid://b2gi8r4ckdqxw" path="res://resources/definitions/enemy_groups/tutorial/tutorial_level_2.tres" id="5_hybj5"]
[ext_resource type="Script" path="res://scripts/combat/controllers/combat_exchange.gd" id="6_aiuc3"]
[ext_resource type="Script" path="res://scripts/combat/entities/combat_map_entity_manager.gd" id="7_no252"]
[ext_resource type="Script" path="res://scripts/Unit/unit_experience_manager.gd" id="8_ywqji"]
[ext_resource type="Script" path="res://scripts/combat/controllers/CombatUnitItemManager.gd" id="9_ljvw1"]
[ext_resource type="PackedScene" uid="uid://ddgx1hll377nx" path="res://ui/combat/combat_ui.tscn" id="10_7n42e"]

[node name="Game" type="Node"]

[node name="Terrain" parent="." instance=ExtResource("1_cimcb")]

[node name="Controller" type="Node2D" parent="." node_paths=PackedStringArray("combat", "selector")]
texture_filter = 1
script = ExtResource("2_adyfm")
combat = NodePath("../Combat")
selector = NodePath("Selector")

[node name="Selector" parent="Controller" instance=ExtResource("3_e6cvr")]
top_level = true
scale = Vector2(1, 1)

[node name="Combat" type="Node" parent="." node_paths=PackedStringArray("game_ui", "controller", "combat_audio", "unit_experience_manager", "combat_unit_item_manager")]
script = ExtResource("4_083q5")
game_ui = NodePath("../CanvasLayer/UI")
controller = NodePath("../Controller")
combat_audio = NodePath("CombatAudio")
unit_experience_manager = NodePath("UnitExperienceManager")
combat_unit_item_manager = NodePath("CombatUnitItemManager")
ally_spawn_top_left = Vector2(1, 6)
ally_spawn_bottom_right = Vector2(2, 9)
enemy_start_group = ExtResource("5_hybj5")
max_allowed_ally_units = 3

[node name="CombatExchange" type="Node" parent="Combat"]
script = ExtResource("6_aiuc3")

[node name="CombatMapEntityManager" type="Node" parent="Combat"]
script = ExtResource("7_no252")

[node name="UnitExperienceManager" type="Node" parent="Combat"]
script = ExtResource("8_ywqji")

[node name="CombatUnitItemManager" type="Node" parent="Combat"]
script = ExtResource("9_ljvw1")

[node name="CombatAudio" type="AudioStreamPlayer" parent="Combat"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" parent="CanvasLayer" node_paths=PackedStringArray("combat", "controller", "ui_map_audio", "ui_menu_audio") instance=ExtResource("10_7n42e")]
combat = NodePath("../../Combat")
controller = NodePath("../../Controller")
ui_map_audio = NodePath("UIMapAudio")
ui_menu_audio = NodePath("UIMenuAudio")
metadata/_edit_use_anchors_ = true

[node name="UIMapAudio" type="AudioStreamPlayer" parent="CanvasLayer/UI"]

[node name="UIMenuAudio" type="AudioStreamPlayer" parent="CanvasLayer/UI"]

[connection signal="finished" from="Combat/CombatAudio" to="Combat" method="play_audio_complete"]
[connection signal="finished" from="Combat/CombatAudio" to="Combat/CombatExchange" method="play_audio_complete"]
[connection signal="turn_ended" from="CanvasLayer/UI" to="Controller" method="advance_turn"]
